ZKP-72: Updates base version for Y! packaging